Fix article title spacing

--- a/app/assets/stylesheets/_home.sass
+++ b/app/assets/stylesheets/_home.sass
@@ -235,7 +235,7 @@
             font-size: 1.1em
             color: black
             display: block
-            min-height: 75px
+            min-height: 49px
 
           img.article
             width: 100%
